--- a/Documentación/LATEX/bibliografia.bib
+++ b/Documentación/LATEX/bibliografia.bib
@@ -1,82 +1,74 @@
-@book{koza92,
-		author    = "Koza, John R.",
-		title     = "Genetic Programming: On the Programming of Computers by Means of Natural Selection",
-		publisher = "MIT Press",
-		year      = "1992"
-}
-
-
-@misc{ wiki:latex,
-       author = "Wikipedia",
-       title = "LaTeX --- Wikipedia{,} La enciclopedia libre",
-       year = "2015",
-       url = "https://es.wikipedia.org/w/index.php?title=LaTeX&oldid=84209252",
-       note = "[Internet; descargado 30-septiembre-2015]"
-}
 
 @misc{pagina:Oracle_IOT,
-    author = "Oracle",
-    title = "¿Qué es el IoT?",
+    author = "{Oracle}",
+    title = "{¿Qué es el IoT?}",
     year = "2020",
-    url = "https://www.oracle.com/es/internet-of-things/what-is-iot/"}
+    howpublished="\url{https://www.oracle.com/es/internet-of-things/what-is-iot/}"
+}
+ 
+@misc{pagina:sensores,
+    author = "{Grant Maloy Smith}",
+    title = "{¿Qué es un Sensor y Qué Hace?}",
+    year = "2020",
+    howpublished="\url{https://dewesoft.com/es/daq/que-es-un-sensor#current-transducer}"
+}
+    
+@misc{pagina:sensor_presion,
+    author = "{Claudia Salazar}",
+    title = "{Tipos de sensores y sus aplicaciones}",
+    year = "2020",
+    howpublished="\url{https://www.industriasgsl.com/blog/post/tipos-de-sensores-y-sus-aplicaciones}"
+}
+
+@misc{pagina:anomalias,
+    author = "{Jonathan Johnson}",
+    title = "{Anomaly Detection with Machine Learning: An Introduction}",
+    year = "2020",
+    howpublished="\url{https://www.bmc.com/blogs/machine-learning-anomaly-detection/}"
+}
   
 @misc{pagina:Python_documentation,
-    author = "Python",
-    title = "General Python FAQ ¿Que es Python?",
+    author = "{Python}",
+    title = "{General Python FAQ ¿Que es Python?}",
     year = "2021",
-    url = "https://docs.python.org/3.11/faq/general.html#what-is-python"}
+    howpublished="\url{https://docs.python.org/3.11/faq/general.html#what-is-python}"
+}
   
 @misc{pagina:River,
-    author = "River",
-    title = "River",
-    year = "2020",
-    url = "https://riverml.xyz/latest/"}
+    author = "{River}",
+    title = "{River}",
+    year = "2021",
+    howpublished="\url{https://riverml.xyz/latest/}"
+}
   
-
 @misc{pagina:JSON,
-    author = "json.org",
-    title = "Introducción a JSON",
-    year = "2020",
-    url = "https://www.json.org/json-es.html"}
+    author = "{json.org}",
+    title = "{Introducción a JSON}",
+    year = "2021",
+    howpublished="\url{https://www.json.org/json-es.html}"
+}
       
 
 @misc{pagina:IBM_Machine_learning,
-    author = "IBM Cloud Education",
-    title = "Machine Learning",
+    author = "{IBM Cloud Education}",
+    title = "{Machine Learning}",
     year = "2020",
-    url = "https://www.ibm.com/cloud/learn/machine-learning"}
+    howpublished="\url{https://www.ibm.com/cloud/learn/machine-learning}"
+}
     
-@article{bortolot2005,
-  title={Estimating forest biomass using small footprint LiDAR data: An individual tree-based approach that incorporates training data},
-  author={Bortolot, Zachary J and Wynne, Randolph H},
-  journal={ISPRS Journal of Photogrammetry and Remote Sensing},
-  volume={59},
-  number={6},
-  pages={342--360},
-  year={2005},
-  publisher={Elsevier}
-}
-
 @misc{ ranking:DB-Engines,
-       author = "DB-Engines",
-       title = "DB-Engines Ranking of Search Engines",
+       author = "{DB-Engines}",
+       title = "{DB-Engines Ranking of Search Engines}",
        year = "2020",
-       url = "https://db-engines.com/en/ranking/search+engine"
+       howpublished="\url{https://db-engines.com/en/ranking/search+engine}"
 }
 
-@misc{documentacion:kafka,
-    author = "Apache Kafka",
-    title = "Kafka 2.7 Documentation",
-    year = "2020",
-    url = "https://kafka.apache.org/27/documentation.html"
-}
-
- 
 @misc{pagina:kafka,
-    author = "Apache Kafka",
-    title = "Apache Kafka a distributed streaming plataform",
+    author = "{Apache Kafka}",
+    title = "{Apache Kafka a distributed streaming plataform}",
     year = "2020",
-    url = "https://kafka.apache.org/"}
+    howpublished="\url{https://kafka.apache.org/}"
+}
     
 @misc{pagina:Samza,
     author = "Apache Samza",
@@ -92,141 +84,180 @@
 }
     
 @misc{pagina:PRTG,
-      author = "PAESSLER",
-      title = "PRTG Network Monitor",
-      year = "2020",
-      url = "https://www.es.paessler.com/prtg"
+      author = "{PAESSLER}",
+      title = "{PRTG Network Monitor}",
+      year = "2021",
+      howpublished="\url{https://www.es.paessler.com/prtg}"
 }
       
 @misc{pagina:ThingSpeak,
-      author = "ThingSpeak",
-      title = "ThingSpeak for IoT Projects",
-      year = "2020",
-      url = "https://thingspeak.com/"
+      author = "{ThingSpeak}",
+      title = "{ThingSpeak for IoT Projects}",
+      year = "2021",
+      howpublished="\url{https://thingspeak.com/}"
 }
 
 @misc{pagina:Grafana,
-      author = "Grafana",
-      title = "Grafana",
-      year = "2020",
-      url = "https://grafana.com/"
+      author = "{Grafana}",
+      title = "{Grafana}",
+      year = "2021",
+      howpublished="\url{https://grafana.com/}"
 }
 
 @misc{pagina:Algolia,
-      author = "Algolia",
-      title = "Algolia",
-      year = "2020",
-      url = "https://www.algolia.com/"
+      author = "{Algolia}",
+      title = "{Algolia}",
+      year = "2021",
+      howpublished="\url{https://www.algolia.com/}"
 }
 
 @misc{pagina:ElasticSearch,
-      author = "ElasticSearch",
-      title = "ElasticSearch",
-      year = "2020",
-      url = "https://www.elastic.co/es/"
+      author = "{ElasticSearch}",
+      title = "{ElasticSearch}",
+      year = "2021",
+      howpublished="\url{https://www.elastic.co/es/}"
 }
 
 @misc{pagina:Solr,
-      author = "Apache Software Foundation",
-      title = "Apache Solr",
-      year = "2020",
-      url = "https://lucene.apache.org/solr/"
+      author = "{Apache Software Foundation}",
+      title = "{Apache Solr}",
+      year = "2021",
+      howpublished="\url{https://lucene.apache.org/solr/}"
 }
 
 @misc{pagina:scikit-learn,
-      author = "David Cournapeau",
-      title = "scikit-learn Machine Learning in Python",
-      year = "2020",
-      url = "https://scikit-learn.org/stable/"
+      author = "{scikit-learn}",
+      title = "{scikit-learn Machine Learning in Python}",
+      year = "2021",
+      howpublished="\url{https://scikit-learn.org/stable/}"
 }
 
-@misc{pagina:scikit-mutliflow,
-      author = "The scikit-mutliflow development team and the open research community",
-      title = "scikit-mutliflow A machine learning package for streaming data in Python",
-      year = "2020",
-      url = "https://scikit-multiflow.github.io/"
+
+@article{skmultiflow,
+  author  = {Jacob Montiel and Jesse Read and Albert Bifet and Talel Abdessalem},
+  title   = {Scikit-Multiflow: A Multi-output Streaming Framework },
+  journal = {Journal of Machine Learning Research},
+  year    = {2018},
+  volume  = {19},
+  number  = {72},
+  pages   = {1-5},
+  url     = {http://jmlr.org/papers/v19/18-251.html}
 }
+
 
 @misc{pagina:HEVO,
-      author = "Nicholas Samuel",
-      title = "Apache Kafka vs Airflow: A Comprehensive Guide",
+      author = "{Nicholas Samuel}",
+      title = "{Apache Kafka vs Airflow: A Comprehensive Guide}",
       year = "2020",
-      url = "https://hevodata.com/learn/apache-kafka-vs-airflow-a-comprehensive-guide/"
+      howpublished="\url{https://hevodata.com/learn/apache-kafka-vs-airflow-a-comprehensive-guide/}"
 }
 
 @misc{pagina:Splunk,
-      author = "Splunk",
-      title = "Splunk: The data-to.Everything Platform",
-      year = "2020",
-      url = "https://www.splunk.com/"
+      author = "{Splunk}",
+      title = "{Splunk: The data-to.Everything Platform}",
+      year = "2021",
+      howpublished="\url{https://www.splunk.com/}"
 }
 
 @misc{pagina:ElasticSearchRepositories,
-      author = "ElasticSearch",
-      title = "Repositories for APT and YUM",
+      author = "{ElasticSearch}",
+      title = "{Repositories for APT and YUM}",
       year = "2021",
-      url = "https://www.elastic.co/guide/en/beats/filebeat/current/setup-repositories.html#_apt"
+      howpublished="\url{https://www.elastic.co/guide/en/beats/filebeat/current/setup-repositories.html#_apt}"
 }
 
 @misc{pagina:Oracle_Big_data,
-      author = "Oracle España",
-      title = "¿Qué es el big data?",
+      author = "{Oracle España}",
+      title = "{¿Qué es el big data?}",
       year = "2021",
-      url = "https://www.oracle.com/es/big-data/what-is-big-data/"
+      howpublished="\url{https://www.oracle.com/es/big-data/what-is-big-data/}"
 }
 
 @misc{pagina:toward_data_scince,
-      author = "Marco Peixeriro",
-      title = "The Complete Guide to Time Series Analysis and Forecasting",
+      author = "{Marco Peixeriro}",
+      title = "{The Complete Guide to Time Series Analysis and Forecasting}",
       year = "2019",
-      url = "https://towardsdatascience.com/the-complete-guide-to-time-series-analysis-and-forecasting-70d476bfe775"
+      howpublished="\url{https://towardsdatascience.com/the-complete-guide-to-time-series-analysis-and-forecasting-70d476bfe775}"
 }
 
 @misc{pagina:techtarget,
-      author = "Margaret Rouse",
-      title = "Inteligencia artificial o IA",
+      author = "{Margaret Rouse}",
+      title = "{Inteligencia artificial o IA}",
       year = "2019",
-      url = "https://searchdatacenter.techtarget.com/es/definicion/Inteligencia-artificial-o-AI"
+      howpublished="\url{https://searchdatacenter.techtarget.com/es/definicion/Inteligencia-artificial-o-AI}"
 }
 
 @misc{pagina:wiki_pandas,
-      author = "Wikipedia",
-      title = "Pandas (software)",
+      author = "{Wikipedia}",
+      title = "{Pandas (software)}",
       year = "2021",
-      url = "https://en.wikipedia.org/wiki/Pandas_(software)"
+      howpublished="\url{https://en.wikipedia.org/wiki/Pandas_(software)}"
 }
 
 @misc{pagina:SkySpark,
-      author = "SkyFoundry",
-      title = "SkySpark",
+      author = "{SkyFoundry}",
+      title = "{SkySpark}",
       year = "2021",
-      url = "https://skyfoundry.com/product"
+      howpublished="\url{https://skyfoundry.com/product}"
 }
 
 @misc{pagina:DataDog,
-      author = "Datadog",
-      title = "Datadog: Modern monitoring \& security",
+      author = "{Datadog}",
+      title = "{Datadog: Modern monitoring \& security}",
       year = "2021",
-      url = "https://www.datadoghq.com/"
+      howpublished="\url{https://www.datadoghq.com/}"
 }
 
 @misc{pagina:AWS,
-      author = "Amazon",
-      title = "AWS IoT Device Management",
+      author = "{Amazon}",
+      title = "{AWS IoT Device Management}",
       year = "2021",
-      url = "https://aws.amazon.com/es/iot-device-management/?nc=sn&loc=2&dn=4"
+      howpublished="\url{https://aws.amazon.com/es/iot-device-management/?nc=sn&loc=2&dn=4}"
 }
 
 @misc{pagina:daemons_linux,
-      author = "Arch Linux",
-      title = "Daemons (Español)",
+      author = "{Arch Linux}",
+      title = "{Daemons (Español)}",
       year = "2021",
-      url = "https://wiki.archlinux.org/title/Daemons_(Espa%C3%B1ol)"
+      howpublished="\url{https://wiki.archlinux.org/title/Daemons_(Espa%C3%B1ol)}"
 }
 
 @misc{pagina:AWS_NoSQL,
-      author = "Amazon",
-      title = "¿Qué es NoSQL?",
+      author = "{Amazon}",
+      title = "{¿Qué es NoSQL?}",
       year = "2021",
-      url = "https://aws.amazon.com/es/nosql/"
+      howpublished="\url{https://aws.amazon.com/es/nosql/}"
+}
+
+@misc{pagina:AWS_dataStream,
+      author = "{Amazon}",
+      title = "{¿Qué son los datos de streaming?}",
+      year = "2021",
+      howpublished="\url{https://aws.amazon.com/es/streaming-data/}"
+}
+
+@misc{pagina:PD_Anomalia,
+      author = "{Amazon}",
+      title = "{¿Qué es NoSQL?}",
+      year = "2021",
+      howpublished="\url{https://aws.amazon.com/es/nosql/}"
+}
+
+@misc{pagina:Curl,
+      author = "{Gustavo B}",
+      title = "{¿Qué es un comando Curl y cómo usarlo?}",
+      year = "2020",
+      howpublished="\url{https://www.hostinger.es/tutoriales/comando-curl}"
+}
+
+@inproceedings{gepperth:hal-01418129,
+  TITLE = {{Incremental learning algorithms and applications}},
+  AUTHOR = {Gepperth, Alexander and Hammer, Barbara},
+  URL = {https://hal.archives-ouvertes.fr/hal-01418129},
+  BOOKTITLE = {{European Symposium on Artificial Neural Networks (ESANN)}},
+  ADDRESS = {Bruges, Belgium},
+  YEAR = {2016},
+  PDF = {https://hal.archives-ouvertes.fr/hal-01418129/file/article.pdf},
+  HAL_ID = {hal-01418129},
+  HAL_VERSION = {v1},
 }
