--- a/Documentación/LATEX/bibliografiaAnexos.bib
+++ b/Documentación/LATEX/bibliografiaAnexos.bib
@@ -1,23 +1,28 @@
-@book{koza92,
-		author    = "Koza, John R.",
-		title     = "Genetic Programming: On the Programming of Computers by Means of Natural Selection",
-		publisher = "MIT Press",
-		year      = "1992"
-}
-
-
-@misc{ wiki:latex,
-       author = "Wikipedia",
-       title = "LaTeX --- Wikipedia{,} La enciclopedia libre",
-       year = "2015",
-       url = "https://es.wikipedia.org/w/index.php?title=LaTeX&oldid=84209252",
-       note = "[Internet; descargado 30-septiembre-2015]"
-}
 
 @misc{pagina:elastic,
-    author = "elastic",
-    title = "Kibana Guide [7.9] Create an index pattern",
-    year = "2020",
-    url = "https://www.elastic.co/guide/en/kibana/7.9/index-patterns.html
-"}
+    author = "{elastic}",
+    title = "{Kibana Guide [7.9] Create an index pattern}",
+    year = "2021",
+    howpublished="\url{https://www.elastic.co/guide/en/kibana/7.9/index-patterns.html}"
+}
+
+@misc{pagina:PRTG,
+    author = "{Brandy Greger and Maike Guba [PEASSLER support]}",
+    title = "{How can I export historic data from the PRTG API?}",
+    year = "2019",
+    howpublished="\url{https://kb.paessler.com/en/topic/76768-how-can-i-export-historic-data-from-the-prtg-api}"
+}
+    
+@misc{pagina:Http_plugin_input,
+    author = "{Elastic Docs}",
+    title = "{Http input plugin}",
+    year = "2021",
+    howpublished="\url{https://www.elastic.co/guide/en/logstash/current/plugins-inputs-http.html}"}
+
+@misc{pagina:KQL,
+    author = "{Elastic Docs}",
+    title = "{Kibana concepts}",
+    year = "2021",
+    howpublished="\url{https://www.elastic.co/guide/en/kibana/7.14/kibana-concepts-analysts.html#autocomplete-suggestions}"}
+    
     
