--- a/Documentación/LATEX/memoria.tex
+++ b/Documentación/LATEX/memoria.tex
@@ -382,11 +382,11 @@
 
 \noindent\includegraphics[width=\textwidth]{cabecera}\vspace{1cm}
 
-\noindent D. nombre Bruno Baruque Zanon, profesor del departamento de nombre departamento, área de nombre área.
+\noindent D. nombre Bruno Baruque Zanon, profesor del departamento Ingeniería Informática, área de Ciencia de la computación e inteligencia.
 
 \noindent Expone:
 
-\noindent Que el alumno D. \nombre, con DNI 71363864Q, ha realizado el Trabajo final de Grado en Ingeniería Informática titulado título de TFG. 
+\noindent Que el alumno D. \nombre, con DNI 71363864Q, ha realizado el Trabajo final de Grado en Ingeniería Informática titulado Monitorización sensores IOT. 
 
 \noindent Y que dicho trabajo ha sido realizado por el alumno bajo la dirección del que suscribe, en virtud de lo cual se autoriza su presentación y defensa.
 
@@ -430,12 +430,16 @@ D. nombre co-tutor
 % Abstract en castellano
 \renewcommand*\abstractname{Resumen}
 \begin{abstract}
-En este primer apartado se hace una \textbf{breve} presentación del tema que se aborda en el proyecto.
+
+El tratamiento, monitorización y gestión de datos procedentes de dispositivos inteligentes es más prioritario que nunca, poder reconocer patrones y tendencias en estos datos puede ayudar a predecir fallos o eventos no deseados con suficiente tiempo de antelación cómo para poder ser evitados. 
+
+Con el fin de desarrollar un sistema capaz de mantener monitorizados y gestionados diversos dispositivos IOT se ha desarrollado esta aplicación.
+
 \end{abstract}
 
 \renewcommand*\abstractname{Descriptores}
 \begin{abstract}
-Palabras separadas por comas que identifiquen el contenido del proyecto Ej: servidor web, buscador de vuelos, android \ldots
+IoT, internet de las cosas, sensores, monitorización, inteligencia artificial, aprendizaje automático, aprendizaje incremental, predicciones, PRTG, Elasticsearch.
 \end{abstract}
 
 \clearpage
@@ -443,12 +447,15 @@ Palabras separadas por comas que identifiquen el contenido del proyecto Ej: serv
 % Abstract en inglés
 \renewcommand*\abstractname{Abstract}
 \begin{abstract}
-A \textbf{brief} presentation of the topic addressed in the project.
+
+The processing, monitoring and management of data from smart devices is more of a priority than ever, being able to recognise patterns and trends in data can help to predict failures or unwanted events sufficiently in advance so that they can be avoided. 
+
+In order to develop a system capable of keeping various IOT devices monitored and managed, this application has been developed.
 \end{abstract}
 
 \renewcommand*\abstractname{Keywords}
 \begin{abstract}
-keywords separated by commas.
+IoT, internet of things, sensors, monitoring, artificial intelligence, machine learning, incremental learning, predictions, PRTG, Elasticsearch.
 \end{abstract}
 
 \clearpage
