--- a/Documentación/LATEX/tex/1_Introduccion.tex
+++ b/Documentación/LATEX/tex/1_Introduccion.tex
@@ -1,15 +1,22 @@
 \capitulo{1}{Introducción}
 
 
-El Internet de las Cosas es un campo que cada vez avanza más rápido, vivimos en un mundo en el que todo está conectado, por ello el tratamiento de los datos procedentes de todos estos sensores es primordial y poder reconocer patrones y tendencias en estos datos puede ser de gran utilidad, no solo para empresas sino para todo el mundo.
+Vivimos en un mundo en el que todo está conectado y parametrizado, miles de dispositivos inteligentes capaces de captar y transmitir datos, desde los relojes que miden nuestras pulsaciones hasta los sensores que miden el nivel de oxígeno en la Estación Espacial Internacional.
 
-Con el fin de mantener monitorizados diversos dispositivos IOT y lograr mediante machine learning la realización de un modelo capaz de aprender de dichos dispositivos y poder lograr una predicción en el futuro, con el objetivo de ver tendencias y detectar fallos o anomalías en los datos procedentes de los sensores se ha desarrollado esta aplicación.
+Por ello el tratamiento de los datos procedentes de todos estos sensores es primordial hoy en día y poder reconocer patrones y tendencias en estos datos puede ser de gran utilidad, no solo para empresas sino para todo el mundo.
 
-A lo largo de esta memoria y sus anexos se verá con detalle cómo ha sido el desarrollo del proyecto, cómo ha sido diseñado y como utilizar el producto final. 
+Con el fin de mantener monitorizados y gestionados diversos dispositivos IOT, los cuales han sido cedidos por un cliente interesado en el proyecto, se ha desarrollado esta aplicación.
+
+A lo largo de esta memoria y sus anexos se verá con detalle cómo ha sido el desarrollo del proyecto, su diseñado y como utilizar el producto final. 
 
 \section{Material adjunto}
 Los materiales que se encuentran adjuntos en la entrega de este proyecto son los siguientes:
 \begin{itemize}
     \item Máquina virtual ubuntu server con la aplicación ya instalada.
     \item Memoria del Trabajo de Fin de Grado más los documentos de anexos.
+    \item Script de instalación \textit{install.sh}.
+    \item Paquete debian \textit{Monitorizacion\_IOT\_1.0\_all.seb}.
+    \item Fichero Jupyter Notebook con las pruebas de regresión realizadas.
+    \item Ficheros con los datasets usados para las pruebas.
+    \item El código del programa.
 \end{itemize}
