--- a/Documentación/LATEX/tex/2_Objetivos_del_proyecto.tex
+++ b/Documentación/LATEX/tex/2_Objetivos_del_proyecto.tex
@@ -7,9 +7,10 @@ Se implementará también un algoritmo de aprendizaje automático que ha de apre
 \subsection{Objetivos}
 
 \begin{enumerate}
-    \item Realizar un algoritmo de aprendizaje automático que pueda predecir comportamientos y patrones en los datos de los sensores.
-    \item La implementación de motores de búsqueda para felicitar encontrar los datos deseados con la mayor precisión posible.
+    \item La instalación y configuración de un sistema capaz de recoger, almacenar y gestionar datos de sensores.
+    \item La implementación de motores de búsqueda para facilitar encontrar los datos deseados con la mayor precisión posible.
     \item Que la monitorización de los datos se muestre lo más clara y accesible posible para el usuario.
+    \item Realizar un algoritmo de aprendizaje automático que pueda predecir comportamientos y patrones en los datos de los sensores.
 \end{enumerate}
 
 
@@ -18,5 +19,5 @@ Se implementará también un algoritmo de aprendizaje automático que ha de apre
 \begin{enumerate}
     \item Utilizar un repositorio en github y aplicar conocimientos sobre gestión de proyectos.
     \item Adentrarme y aprender sobre tratamiento, procesado y gestión de datos.
-    \item Reforzar mis conocimientos en el campo de la inteligencia artificial.
+    \item Tratar con dispositivos IoT.
 \end{enumerate}
