--- a/Documentación/LATEX/tex/6_Trabajos_relacionados.tex
+++ b/Documentación/LATEX/tex/6_Trabajos_relacionados.tex
@@ -4,14 +4,14 @@
 En este apartado se mostrarán algunas aplicaciones y trabajos similares relacionados con la monitorización, análisis y predicción de datos procedentes de tecnologías del internet de las cosas.
 
 
-\section{Elasticsearch}
+\section{Elasticsearch Machine Learning}
 
-Elasticsearch, la herramienta que se utiliza como motor de monitorización y base de datos para nuestro proyecto cuenta con una herramienta que permite realizar predicciones sobre los datos almacenados, sin embargo, esta funcionalidad es de pago.
+Elasticsearch, la herramienta que se utiliza como motor de monitorización y base de datos para nuestro proyecto cuenta con una herramienta que permite realizar predicciones y detección de anomalías, sobre los datos almacenados, sin embargo, esta funcionalidad es de pago.\cite{pagina:ElasticSearch}
 
 \section{SkySpark}
 SkySpark es una plataforma de análisis de datos procedentes de dispositivos inteligentes IOT desarrollada por la compañía \textit{SkyFoundry}, este software está diseñado para la identificación de fallos, anomalías y tendencias sobre los datos almacenados. Se encuentra disponible en cualquier plataforma que soporte java, como pueden ser los sistemas operativos de Windows, Linux o macOS. 
 
-Esta plataforma es de pago, aunque consta de una demo gratuita. \cite{pagina:SkySpark} 
+Esta plataforma es de pago, aunque ofrece de una demo gratuita. \cite{pagina:SkySpark} 
 
 
 \section{Datadog IoT Monitoring}
