--- a/Documentación/LATEX/tex/7_Conclusiones_Lineas_de_trabajo_futuras.tex
+++ b/Documentación/LATEX/tex/7_Conclusiones_Lineas_de_trabajo_futuras.tex
@@ -4,13 +4,13 @@ Para concluir, en este último apartado se compartirán las conclusiones a las q
 
 \section{Conclusión}
 
-Tras la finalización del proyecto se entrega un producto totalmente funcional, capaz de monitorizar diversos sensores y lograr realizar predicciones a futuro.
+Tras la finalización del proyecto se entrega un producto totalmente funcional, capaz de monitorizar diversos sensores y lograr realizar predicciones a futuro, pese a que las predicciones no sean tan fiables cómo cabría de esperar, este es sin duda un apartado en el que habría que mejorar, modificar los algoritmos o buscar nuevas soluciones que pudieran realizar predicciones fiables.
 
 Durante el transcurso del proyecto no solo se han logrado los objetivos generales sino los personales también, el realizar un proyecto cómo este para lo bueno y para lo malo ha sido una experiencia enriquecedora tanto profesionalmente como personalmente.
 
 
 \section{Líneas de trabajo futuras}
-Esta aplicación se podría mejorar con la implementación nuevas funcionalidades así como la mejora de las ya existentes.
+Esta aplicación se podría mejorar con la implementación nuevas funcionalidades, así como la mejora de las ya existentes.
 
 A continuación, se listan algunas de ellas:
 \begin{itemize}
@@ -20,6 +20,6 @@ A continuación, se listan algunas de ellas:
         \item Añadir y borrar sensores de manera gráfica.
         \item Poder crear modelos para los sensores de forma intuitiva.
     \end{itemize}
-    \item Guardar metadatos de los sensores que se vayan a introducir como pueden ser el nombre del sensor, localización, etc.
-    \item Mejorar los algoritmos de aprendizaje incremental así cómo añadir nuevos modelos.
+    \item Guardar metadatos de los sensores que se vayan a introducir en Elasticsaerch como pueden ser el nombre del sensor, localización, etc. 
+    \item Mejorar los algoritmos de aprendizaje incremental así cómo añadir nuevos modelos capaces de realizar mejores predicciones.
 \end{itemize}
