--- a/Documentación/LATEX/tex/A_Plan_proyecto.tex
+++ b/Documentación/LATEX/tex/A_Plan_proyecto.tex
@@ -2,19 +2,19 @@
 
 \section{Introducción}
 
-La planificación y el seguimiento de metodologías de desarrollo es esencial para el éxito de cualquier proyecto. En esta sección se describirá la planificación temporal que se ha seguido del proyecto, así como el estudio de viabilidad del mismo.
+La planificación y el seguimiento de metodologías de desarrollo es esencial para el éxito de cualquier proyecto. En esta sección se describe la planificación temporal que se ha seguido en el proyecto, así como el estudio de viabilidad de este.
 
 \section{Planificación temporal}
 
-Para la realización del proyecto se ha optado por la utilización del método \textbf{Scrum}, una metodología ágil de gestión de proyectos en la  que se ha dividido el desarrollo en \textbf{sprints} de aproximadamente 2 semanas de duración en la que había una reunión con el tutor y se planteaban las próximas tareas que se iban a realizar.
+Para la realización del proyecto se ha optado por la utilización del método \textbf{Scrum}, una metodología ágil de gestión de proyectos en la  que se ha dividido el desarrollo en \textbf{sprints} de aproximadamente 2 semanas de duración en la que se tenía una reunión con el tutor donde se planteaban las próximas tareas que se iban a realizar.
 
 Para la organización de tareas se utilizó una tabla con 6 columnas:
 
 \begin{itemize}
-    \item \textbf{Procut Backlog}: En esta columna se colocan las tareas que se han de realizar a lo largo del proyecto.
+    \item \textbf{Product Backlog}: En esta columna se colocan las tareas que se han de realizar a lo largo del proyecto.
     \item \textbf{Sprint Backlog}: Al inicio de cada sprint se mueven a esta columna las tareas que se planea realizar durante el transcurso de dicho sprint.
     \item \textbf{In Progress}: En esta columna se encuentran todas aquellas tareas que se están realizando en ese momento.
-    \item \textbf{Review/QA}: Cuando en alguna tarea sea necesario realizar una revisión por parte del propio desarrollador cómo por parte del tutor se mueve a esta columna.
+    \item \textbf{Review/QA}: Cuando en alguna tarea sea necesario realizar una revisión por parte del propio desarrollador o por parte del tutor, se mueve a esta columna.
     \item \textbf{Done}: Cuando las tareas ya han sido finalizadas se mueven a esta columna
     \item \textbf{IceBox}: En esta última columna se colocan las tareas que han sido abandonadas o que tienen muy baja prioridad.
 \end{itemize}
@@ -26,9 +26,9 @@ Debido a la situación actual del COVID-19 las reuniones se llevaron a cabo medi
 
 \subsection{Sprint 0 - Introducción (30/11/2020 - 14/12/2020)}
 
-Durante este \textbf{Sprint} lo principal fue investigar sobre las posibles herramientas que se podrían utilizar en este proyecto así cómo documentar dichas herramientas en la memoria.
+Durante este primer \textbf{Sprint} lo principal fue investigar sobre las posibles herramientas que se podrían utilizar en este proyecto así cómo documentar dichas herramientas en la memoria.
 
-Durante esta parte del proyecto se creó el repositorio de Github y se instaló ZenHub para gestionar las issues del proyecto.
+Durante esta parte del proyecto se creó el repositorio de Github y se instaló \textbf{ZenHub} para gestionar las tareas del proyecto.
 
 \subsection{Sprint 1   (14/12/2020 - 04/01/2021 )}
 
@@ -36,14 +36,14 @@ Durante este \textbf{Sprint} se especificaron cuáles serían los objetivos del 
 
 \subsection{Sprint 2   (04/01/2021 - 06/02/2021 )}
 
-Durante este \textbf{Sprint} se instaló el servidor PRTG en una máquina virtual Windows 10 así cómo Elasticsearch. 
+Durante este \textbf{Sprint} se instaló el servidor PRTG en una máquina virtual Windows 10.
 
 \subsection{Sprint 3   (06/02/2021 - 25/02/2021 )}
 
 Durante este \textbf{Sprint} se instaló Elasticsearch, programa el cual serviría de BBDD y monitorización de nuestros sensores, en un equipo con sistema Window y se procedió a conectarlo con PRTG. 
 
 \subsection{Sprint 4   (25/02/2021 - 12/03/2021 )}
-Durante este \textbf{Sprint} se migro Elasticsearch a una máquina Virtual Ubuntu server para poder simular un servidor real.
+Durante este \textbf{Sprint} se migró Elasticsearch a una máquina Virtual Ubuntu server para poder simular un servidor real.
 
 
 \subsection{Sprint 5   (12/03/2021 - 26/03/2021 )}
@@ -51,7 +51,7 @@ Durante este \textbf{Sprint} se migro Elasticsearch a una máquina Virtual Ubunt
 Durante este \textbf{Sprint} se fue estructurando y creando el manual de instalación con lo desarrollado hasta la fecha.
 
 \subsection{Sprint 6 - Conectividad PRTG-ELK (28/03/2021 - 12/04/2021 )}
-En este \textbf{Sprint} se finaliza con la conexión entre PRTG y Elasticsearch, Se idea una forma de transformar los datos procedentes de PRTG mediante un sencillo programa en Flex para que los datos sean más fáciles de leer por logstash.
+En este \textbf{Sprint} se finaliza con la conexión entre PRTG y Elasticsearch, se idea una forma de transformar los datos procedentes de PRTG mediante un sencillo programa en Flex para que los datos sean más fáciles de leer por logstash.
 
 Con los datos obtenidos y almacenados el Elasticsearch se pudo empezar a monitorizar los datos gracias a Kibana
 
@@ -69,7 +69,7 @@ Además, se realizaron diversas pruebas y tutórales con algoritmos de machine l
 En este \textbf{Sprint} se creó el modelo y se desarrolló una función capaz de devolver los datos predichos por el modelo a Elasticsearch para poder ser visualizados.
 
 \subsection{Sprint 10  (10/06/2021 - 24/06/2021 )}
-En este \textbf{Sprint} se realizaron una seré de funciones que permitían guardar y cargar el modelo al programa.
+En este \textbf{Sprint} se realizaron una serie de funciones que permitían guardar y cargar el modelo al programa.
 
 También se refactorizó el código para aumentar su legibilidad y mantener un formato y una coherencia.
 
@@ -97,8 +97,7 @@ Antes de adentrarse en la realización de cualquier proyecto se ha de estudiar s
 A continuación, se hará un estudio sobre los costes y beneficios del proyecto si este se hubiera realizado en un ambiente empresarial real.
 
 \subsubsection{Costes}
-
-\subsubsubsection{\textbf{Costes personales}}
+\textbf{Costes personales}
 
 El desarrollo del proyecto ha sido realizado por un desarrollador junior, suponiendo que el salario bruto mensual es de 2000€.
 
@@ -112,7 +111,7 @@ Salario mensual bruto  & \multicolumn{1}{r}{2000}\\\hline
 \textbf{Coste total (6 meses)}  & \multicolumn{1}{r}{12000}\\
 }
 
-\subsubsubsection{\textbf{Costes hardware}}
+\textbf{Costes hardware}
 
 En este apartado se mostrará el coste de los dispositivos hardware empleados para el desarrollo del proyecto. Dado que este se ha realizado durante 8 meses y suponiendo que la amortización es de 4 años.
   
@@ -122,7 +121,7 @@ En este apartado se mostrará el coste de los dispositivos hardware empleados pa
   Ordenador  & \multicolumn{1}{r}{1200€} & \multicolumn{1}{r}{50€}\\
   }
   
-\subsubsubsection{\textbf{Costes software}}
+\textbf{Costes software}
 
 En este apartado se revisarán los costes asociados a licencias de software no gratuitos. Consideraremos que la amortización del software es de 2 años.
 
@@ -132,6 +131,18 @@ En este apartado se revisarán los costes asociados a licencias de software no g
  {
   Windows 10 pro  & \multicolumn{1}{r}{259€} & \multicolumn{1}{r}{5.4€}\\
    \multicolumn{1}{r}{}\\
+  }
+  
+\textbf{Costes totales}
+
+\tablaSmallSinColores{Coste Software}{p{3.4cm} p{1.15cm} p{4cm}}{Coste total}{
+  \multicolumn{1}{p{4.5cm}}{\textbf{Concepto}} & \textbf{Coste} & \textbf{Amortización}\\
+ }
+ {
+  Ordenador  & \multicolumn{1}{r}{1200€} & \multicolumn{1}{r}{50€}\\
+  Windows 10 pro  & \multicolumn{1}{r}{259€} & \multicolumn{1}{r}{5.4€}\\
+   \multicolumn{1}{r}{}\\
+  Total  & \multicolumn{1}{r}{1459€} & \multicolumn{1}{r}{55.4€}\\
   }
   
 \subsubsection{Beneficios}
@@ -149,12 +160,12 @@ A continuación, se mostrarán las licencias del software empleado.
   \multicolumn{1}{p{4.5cm}}{\textbf{Herramienta}} & \textbf{Licencia}\\
  }
  {
-  Elasticsearch  & \multicolumn{1}{r}{}\\
-  PRTG  & \multicolumn{1}{r}{}\\
-  virtualBox  & \multicolumn{1}{r}{}\\
-  Ubuntu  & \multicolumn{1}{r}{}\\
-  Windows 10  & \multicolumn{1}{r}{}\\
-  Git  & \multicolumn{1}{r}{GPL2}\\
+  Elasticsearch  & \multicolumn{1}{r}{Apache License 2.0}\\
+  PRTG  & \multicolumn{1}{r}{PRTG Freeware Edition}\\
+  virtualBox  & \multicolumn{1}{r}{Privativa / GPLv2}\\
+  Ubuntu server & \multicolumn{1}{r}{GPL, y otras licencias libres}\\
+  Windows 10  & \multicolumn{1}{r}{Microsoft CLUF (EULA) OEM}\\
+  Git  & \multicolumn{1}{r}{GNU GPL v2}\\
   GitHub  & \multicolumn{1}{r}{Propietaria/Privativa}\\
    \multicolumn{1}{r}{}\\
   }
